# CppAst.NET

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  appveyor.yml  changelog.md  license.txt  readme.md
src/CppAst/: CMakeLists.txt  CXUtil.cs  CppArrayType.cs  CppAst.cd  CppAst.csproj  CppAttribute.cs  CppAttributeFlags.cs  CppAttributeKind.cs  CppBaseType.cs  CppBlockFunctionType.cs  CppCallingConvention.cs  CppClass.cs  CppClassKind.cs  CppComment.cs  CppCompilation.cs  CppContainerHelper.cs  CppContainerList.cs  CppDeclaration.cs  CppDiagnosticBag.cs  CppDiagnosticMessage.cs  CppElement.cs  CppEnum.cs  CppEnumItem.cs  CppExpression.cs  CppExpressionKind.cs  CppExtensions.cs  CppField.cs  CppFunction.cs  CppFunctionFlags.cs  CppFunctionType.cs  CppFunctionTypeBase.cs  CppGenericType.cs  CppGlobalDeclarationContainer.cs  CppMacro.cs  (+50 more)
src/CppAst.Tests/: CMakeLists.txt  CppAst.Tests.csproj  GlobalUsings.cs  InlineTestBase.cs  InlineTests.cs  TestAttributes.cs  TestCDeclarationsAdvanced.cs  TestComments.cs  TestCommentsAdvanced.cs  TestCoverageGaps.cs  TestCppClassesAdvanced.cs  TestEnums.cs  TestEnumsAdvanced.cs  TestExpressions.cs  TestExpressionsAdvanced.cs  TestFunctions.cs  TestGlobalVariables.cs  TestGlobalVariablesAdvanced.cs  TestIncludesAdvanced.cs  TestMacros.cs  TestMethods.cs  TestMisc.cs  TestModelInvariants.cs  TestNamespaces.cs  TestObjectiveC.cs  TestOpenIssueCharacterization.cs  TestParserOptionsAndDiagnostics.cs  TestPragma.cs  TestPreprocessorAdvanced.cs  TestReadme.cs  TestRegressionIssues.cs  TestStructs.cs  TestTemplatesAdvanced.cs  TestTypeAliases.cs  TestTypedefs.cs  TestTypes.cs  test_indirect.h  test_pragma.h  test_pragma_root.h  test_usingdirective_used.h  (+2 more)
(+19 files in other folders)
